# Chinese_Rime

./: .gitattributes  .gitignore  .gitmodules  AGENT.md  README.md  build_manifest.py  build_phonology.py  dieziu.dict.yaml  dieziu.schema.yaml  dioion.schema.yaml  kuankhiunn.schema.yaml  triungkoxsampheng.schema.yaml  update_submodules  zyenpheng.dict.yaml  zyenpheng.schema.yaml
data/: Dangrvond.dict.yaml  (+5 more)
script/: .gitignore  .readme_ids.txt  __main__.py  build_manifest.py  build_phonology.py  manifest_overrides.yaml  phonology_ipa_dictionary.yaml  phonology_overrides.yaml  pyproject.toml  source_info.yaml  update_download.py  update_submodules.sh
script/manifest/: detect_orphans.py  emit_json.py  join_source_info.py  merge_overrides.py  walk_submodules.py
script/manifest/phonology/: README.md  __init__.py  compile.py  decomposer.py  dict_reader.py  ipa_classify.py  resolver.py  schema_hints.py
script/tests/: conftest.py  test_build_manifest_integration.py  test_detect_orphans.py  test_emit_json.py  test_join_source_info.py  test_merge_overrides.py  test_phonology_compile.py  test_phonology_decomposer.py  test_phonology_dict_reader.py  test_phonology_ipa_classify.py  test_phonology_resolver.py  test_phonology_schema_hints.py  test_walk_submodules.py
script/tests/fixtures/: expected_schemas.json  manifest_overrides.yaml  source_info.yaml
script/tests/fixtures/phonology/: sample_jyutping.dict.yaml  sample_jyutping.schema.yaml  sample_no_tone.schema.yaml  sample_tabs.schema.yaml
script/tests/fixtures/sources/吳語/sample-recipe/: wugniu_soutseu.schema.yaml
(+621 files in other folders)
